--- a/packages/impoexpo-client/src/styles/globals.css
+++ b/packages/impoexpo-client/src/styles/globals.css
@@ -20,7 +20,12 @@
 
 	background-image: radial-gradient(var(--dot-color) 15%, transparent 10%),
 		radial-gradient(var(--dot-color) 10%, transparent 10%);
-	background-color: #fff;
 	background-position: 0 0, var(--bg-size) var(--bg-size);
 	background-size: var(--bg-size) var(--bg-size);
+
+	transition: 0.25s ease-in-out;
+}
+
+:root.dark {
+	--dot-color: #ffffff10;
 }
