--- a/packages/impoexpo-client/src/styles/globals.css
+++ b/packages/impoexpo-client/src/styles/globals.css
@@ -15,7 +15,9 @@
 
 :root {
 	font-family: Inter, sans-serif;
-	font-feature-settings: "liga" 1, "calt" 1;
+	font-feature-settings:
+		"liga" 1,
+		"calt" 1;
 	/* fix for Chrome */
 }
 
@@ -29,9 +31,12 @@
 	--bg-size: 25px;
 	--dot-color: #cccccc40;
 
-	background-image: radial-gradient(var(--dot-color) 15%, transparent 10%),
+	background-image:
+		radial-gradient(var(--dot-color) 15%, transparent 10%),
 		radial-gradient(var(--dot-color) 10%, transparent 10%);
-	background-position: 0 0, var(--bg-size) var(--bg-size);
+	background-position:
+		0 0,
+		var(--bg-size) var(--bg-size);
 	background-size: var(--bg-size) var(--bg-size);
 
 	transition: 0.25s ease-in-out;
