--- a/packages/impoexpo-client/src/styles/globals.css
+++ b/packages/impoexpo-client/src/styles/globals.css
@@ -1,4 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap");
 @import "tailwindcss";
+
 @plugin './hero.ts';
 @source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 @custom-variant dark (&:is(.dark *));
@@ -44,4 +46,8 @@
 
 :root.dark {
 	--dot-color: #ffffff10;
+}
+
+@theme {
+	--font-instrument: "Instrument Serif", serif;
 }
